Ref: change scrape key and add scrape all study programs
