# docs/swagger.json
@@ -63,8 +63,8 @@
             }
         },
         "/api/v1/study-programs": {
-            "post": {
-                "description": "Get study programs based on the request",
+            "get": {
+                "description": "Get study programs based on the faculty in the query parameters",
                 "consumes": [
                     "application/json"
                 ],
@@ -77,13 +77,10 @@
                 "summary": "Get Study Programs",
                 "parameters": [
                     {
-                        "description": "Study Programs Request",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rest.StudyProgramsRequest"
-                        }
+                        "type": "string",
+                        "description": "Faculty",
+                        "name": "faculty",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -175,12 +172,14 @@
             ],
             "properties": {
                 "day": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "senin"
                 },
                 "study_programs": {
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 3
+                    "minLength": 3,
+                    "example": "matematika"
                 }
             }
         },
@@ -192,19 +191,6 @@
                     "items": {
                         "$ref": "#/definitions/entities.RowData"
                     }
-                }
-            }
-        },
-        "rest.StudyProgramsRequest": {
-            "type": "object",
-            "required": [
-                "faculty"
-            ],
-            "properties": {
-                "faculty": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3
                 }
             }
         },
